@@ -3,6 +3,7 @@ gameFullName=Total Party Kill
 
 start=start
 options=options
+records=records
 credits=credits
 
 score=SCORE: {0}
@@ -16,6 +17,8 @@ river=river
 forest=forest
 dungeon=dungeon
 village=village
+
+recordHighscore=Level {0}: {1}
 
 settings=settings
 music=music: {0}
