@@ -1,0 +1,6 @@
+package com.mygdx.menu;
+
+import com.badlogic.gdx.scenes.scene2d.Stage;
+
+public class Credits extends Stage {
+}
